# data-encoding

./: .gitignore  Dockerfile  WORKSPACE.bazel
bzl/: library.bzl  opam.bzl
src/: BUILD.bazel
test/: BUILD.bazel
